# Playwright-AI--Python

./: README.md  conftest.py  env.example  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
config/: config.yaml  staging.yaml
framework/: __init__.py  base_test.py  page_base.py
pages/: __init__.py  chat_page.py  google_page.py  home_page.py
reports/: report.html  test_report.html
tests/: __init__.py
tests/web/: test_basic_ui.py  test_chat_functionality.py  test_demo.py  test_home_page.py  test_page_objects.py
